--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
     <div class="product">
       <h3>Cleanser</h3>
-      <img src=""
+      <img src="https://rukminim2.flixcart.com/image/850/1250/xif0q/cleanser/e/9/3/-original-imagzzmp4zgfrrrw.jpeg?q=20&crop=false"
           alt="Cleanser"
           style="width: 50px; height:100px;">
       <p>Price: Rs. 600</p>
@@ -147,7 +147,10 @@
 
     <div class="product">
       <h3>Omega 3</h3>
-      <p>Price: Rs. 699</p>
+      <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcQmAKrE3HxLvPfKueNBdV1cez4EestknNZY7t8qP0KTEVWncrD_Fb82PJyn34Zss0Bd26zUto7oXUPhuEMRAXK3G05rVgsXw5vn86MqOINom1OnYvNGV0gqQbA-tJw6SLn_FUT2PHY&usqp=CAc"
+          alt="Omega 3"
+          style="width: 50px; height:100px;">
+      <p>Price: Rs. 699</p>   
       <input type="number" min="1" value="1" class="qty">
       <button class="add-to-cart" data-product="Omega 3" data-price="699">Add to Cart</button>
     </div>
